# qudit-tree

./: Cargo.toml  README.md
src/: lib.rs  qvm.rs
src/bytecode/: buffer.rs  bytecode.rs  generalized.rs  generator.rs  mod.rs  optimizer.rs  specialized.rs
src/bytecode/instructions/: frpr.rs  kron.rs  matmul.rs  mod.rs  write.rs
src/compiler/: compiler.rs
src/tree/: builder.rs  constant.rs  contract.rs  fmt.rs  identity.rs  kron.rs  mod.rs  mul.rs  optimizer.rs  perm.rs  tree.rs
