[package]
name = "qudit-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qudit-core = { path = "../qudit-core" }
qudit-expr = { path = "../qudit-expr" }
faer = "0.21.4"
aligned-vec = "*"
bytemuck = "*"

[dev-dependencies]
proptest = "*"
